# DaseX

./: .gitignore  CMakeLists.txt  Doxygen.config  README.md  config.h.in  executeTest.sh  executeTest1.sh  executeTime.txt
src/: CMakeLists.txt  main.cpp
src/binder/: bind_create.cpp  bind_insert.cpp  bind_select.cpp  binder.cpp  bound_statement.cpp  create_statement.cpp  execute_ddl.cpp  node_tag_to_string.cpp  select_statement.cpp  transformer.cpp
src/common/: exception.h  rc.hpp
src/common/config/: config.cpp  config.hpp
src/common/context/: context.hpp  execute_context.cpp  execute_context.hpp
src/common/type/: comparison_operators.hpp  expression_type.cpp  expression_type.hpp  logical_type.hpp  numeric_operator_type.hpp  operator_result_type.hpp  order_type.hpp  physical_operator_type.cpp  physical_operator_type.hpp  pipeline_result_type.hpp  task_type.hpp  value_operations.hpp  value_type.cpp  value_type.hpp  vector_operations.cpp  vector_operations.hpp
src/expression/: bound_case_expression.hpp  bound_columnref_expression.hpp  bound_comparison_expression.hpp  bound_conjunction_expression.hpp  bound_constant_expression.hpp  bound_function_expression.hpp  bound_in_expression.hpp  bound_project_function_expression.hpp  expression.cpp  expression.hpp  expression_executor.cpp  expression_executor.hpp  expression_executor_state.cpp  expression_executor_state.hpp
src/function/: binary_exector.cpp  binary_executor.hpp  date.hpp  function.cpp  function.hpp  like.cpp  like.hpp  llm_call.cpp  llm_call.hpp  numeric.cpp  numeric.hpp  scalar_function.cpp  scalar_function.hpp  string_functions.cpp  string_functions.hpp  unary_executor.hpp
src/include/binder/: binder.h  bound_expression.h  bound_order_by.h  bound_statement.hpp  bound_table_ref.h  statement_type.hpp
src/include/binder/expressions/: bound_agg_call.h  bound_alias.h  bound_binary_op.h  bound_case.h  bound_column_ref.h  bound_constant.h  bound_func_call.h  bound_star.h  bound_subquery.h  bound_unary_op.h
src/include/binder/statement/: create_statement.hpp  insert_statement.hpp  select_statement.hpp
src/include/binder/table_ref/: bound_base_table_ref.h  bound_cross_product_ref.h  bound_cte_ref.h  bound_expression_list_ref.h  bound_join_ref.h  bound_subquery_ref.h
src/operator/: physical_operator.cpp  physical_operator.hpp  physical_operator_states.hpp
src/operator/agg/: aggregation_hashtable.cpp  aggregation_hashtable.hpp  aggregation_state.hpp  physical_hash_aggregation.cpp  physical_hash_aggregation.hpp  physical_hash_aggregation_with_multifield.hpp  physical_hash_aggregation_with_multifiled.cpp
src/operator/filter/: filter_condition.hpp  physical_filter.cpp  physical_filter.hpp
src/operator/helper/: physical_result_collector.cpp  physical_result_collector.hpp
src/operator/join/: bloom_filter.cpp  bloom_filter.hpp
src/operator/join/hashjoin/: join_hashtable.cpp  join_hashtable.hpp  physical_hash_join.cpp  physical_hash_join.hpp  radix_hashtable.hpp
src/operator/join/nestedloopjoin/: physical_nested_loop_join.cpp  physical_nested_loop_join.hpp
src/operator/join/radixjoin/: physical_radix_join.cpp  physical_radix_join.hpp
src/operator/order/: merge_sort_task.hpp  physical_order.cpp  physical_order.hpp
src/operator/project/: physical_project.cpp  physical_project.hpp
src/operator/scan/: physical_cte_scan.hpp  physical_table_scan.cpp  physical_table_scan.hpp
src/optimizer/: filter_pushdown.cpp  filter_pushdown.hpp  optimizer.cpp  optimizer.hpp
src/pipeline/: expression_transformer.cpp  expression_transformer.hpp  pipe.cpp  pipe.h  pipeline.cpp  pipeline.hpp  pipeline_group.cpp  pipeline_group.hpp  pipeline_task.hpp
src/pipeline/execute/: pipeline_group_execute.cpp  pipeline_group_execute.hpp
src/planner/: abstract_expression.h  abstract_expression_utils.cpp  abstract_expression_utils.h  abstract_plan.h  agg_plan.h  calc_expression.h  case_expression.h  column_value_expression.h  compare_expression.h  constant_value_expression.h  filter_plan.h  like_expression.h  llm_expression.h  logic_expression.h  nest_loop_join_plan.h  plan_expression.cpp  plan_node.cpp  plan_select.cpp  planner.cpp  planner.hpp  projection_plan.h  seq_scan_plan.h  sort_plan.h  subquery_expression.h
src/sche/: barrier.hpp  scheduler.hpp  scheduler_read.hpp  worker.cpp  worker.hpp  worker_read.cpp  worker_read.hpp
src/sql/: query_handler.cpp  query_handler.hpp
src/storage/: catalog.cpp  catalog.hpp
src/util/: arrow_help.cpp  arrow_help.hpp  common.cpp  common.hpp  common_macro.hpp  numa_help.cpp  numa_help.hpp  output_util.cpp  output_util.hpp  time_help.cpp  time_help.hpp  typedefs.hpp
test_data/: revenue.tbl
test_data/4thread/: customer.tbl_0  customer.tbl_1  customer.tbl_2  customer.tbl_3  nation2.tbl_0  nation2.tbl_1  nation2.tbl_2  nation2.tbl_3  orders.tbl_0  orders.tbl_1  orders.tbl_2  orders.tbl_3  part.tbl_0  part.tbl_1  part.tbl_2  part.tbl_3  partsupp.tbl_0  partsupp.tbl_1  partsupp.tbl_2  partsupp.tbl_3  revenue.tbl_0  revenue.tbl_1  revenue.tbl_2  revenue.tbl_3  supplier.tbl_0  supplier.tbl_1  supplier.tbl_2  supplier.tbl_3
tests/: CMakeLists.txt  create_table.cpp  create_table.hpp  file_dir_config.hpp  import_data.cpp  import_data.hpp  include.hpp  test_alias.cpp  test_case_expr.cpp  test_like_expr.cpp  test_load_from_file.cpp  test_optimizer.cpp  test_persistence.cpp  test_pipe.cpp  test_spj.cpp  test_subquery.cpp  test_tpch_q1.cpp  test_tpch_q14.cpp  test_tpch_q18.cpp  test_tpch_q3.cpp  test_tpch_q4.cpp  test_tpch_q6.cpp  test_tpch_q9.cpp  test_udf.cpp  tpch_by_sqls.cpp  tpch_by_sqls_loaded.cpp  tpch_q1.cpp  tpch_q10.cpp  tpch_q11.cpp  tpch_q12.cpp  tpch_q13.cpp  tpch_q14.cpp  tpch_q15.cpp  tpch_q16.cpp  tpch_q17.cpp  tpch_q18.cpp  tpch_q19.cpp  tpch_q1_nosum.cpp  tpch_q2.cpp  tpch_q20.cpp  (+9 more)
